--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!--css-->
     <link href='./assets/css/style.css' rel='stylesheet' type='text/css'>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js'></script>
     
+
     <title>Play with SVG</title>
 </head>
 
