--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body>
     <div id="main">
+        <div id="buttonRow" class="row"> Time lapse:
+            <button id="play">Play</button>
+            </div>
     <div id="map-holder">
 
     <img id="loading" src="./assets/images/loading.gif"/>
@@ -22,28 +25,29 @@
     <aside>
         <div id="title">14 day rate per 100k pop:</div>
         <div id="legend">
-            <div class="label">0-1: 
+            <div class="label row">0-1: 
             <div class="r1 legend"></div></div>
-            <div class="label">2-5: 
+            <div class="label row">2-5: 
             <div class="r5 legend"></div></div>
-            <div class="label">6-15: 
+            <div class="label row">6-15: 
             <div class="r15 legend"></div></div>
-            <div class="label">16-30: 
+            <div class="label row">16-30: 
             <div class="r30 legend"></div></div>
-            <div class="label">31-50: 
+            <div class="label row">31-50: 
             <div class="r50 legend"></div></div>
-            <div class="label">51-100: 
+            <div class="label row">51-100: 
             <div class="r100 legend"></div></div>
-            <div class="label">101-150: 
+            <div class="label row">101-150: 
             <div class="r150 legend"></div></div>
-            <div class="label">151-200: 
+            <div class="label row">151-200: 
             <div class="r200 legend"></div></div>
-            <div class="label">201-500: 
+            <div class="label row">201-500: 
             <div class="r500 legend"></div></div>
-            <div class="label">501+: 
+            <div class="label row">501+: 
             <div class="rMore legend"></div></div>
         
         </div>
+
     </aside>
     
     <!--SVG Map of California thanks to Thadius856 on commons.wikimedia.org-->
